; ModuleID = '/home/carl/AnghaBench/redis/src/extr_scripting.c_ldbMaxlen.c'
source_filename = "/home/carl/AnghaBench/redis/src/extr_scripting.c_ldbMaxlen.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32, i32 }

@ldb = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [43 x i8] c"<value> replies are truncated at %d bytes.\00", align 1
@.str.1 = private unnamed_addr constant [31 x i8] c"<value> replies are unlimited.\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ldbMaxlen(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = icmp eq i32 %6, 2
  br i1 %7, label %8, label %21

8:                                                ; preds = %2
  %9 = load i32*, i32** %3, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 1
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @atoi(i32 %11)
  store i32 %12, i32* %5, align 4
  store i32 1, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ldb, i32 0, i32 0), align 4
  %13 = load i32, i32* %5, align 4
  %14 = icmp ne i32 %13, 0
  br i1 %14, label %15, label %19

15:                                               ; preds = %8
  %16 = load i32, i32* %5, align 4
  %17 = icmp sle i32 %16, 60
  br i1 %17, label %18, label %19

18:                                               ; preds = %15
  store i32 60, i32* %5, align 4
  br label %19

19:                                               ; preds = %18, %15, %8
  %20 = load i32, i32* %5, align 4
  store i32 %20, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ldb, i32 0, i32 1), align 4
  br label %21

21:                                               ; preds = %19, %2
  %22 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ldb, i32 0, i32 1), align 4
  %23 = icmp ne i32 %22, 0
  br i1 %23, label %24, label %29

24:                                               ; preds = %21
  %25 = call i32 (...) @sdsempty()
  %26 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @ldb, i32 0, i32 1), align 4
  %27 = call i32 (i32, i8*, ...) @sdscatprintf(i32 %25, i8* getelementptr inbounds ([43 x i8], [43 x i8]* @.str, i64 0, i64 0), i32 %26)
  %28 = call i32 @ldbLog(i32 %27)
  br label %33

29:                                               ; preds = %21
  %30 = call i32 (...) @sdsempty()
  %31 = call i32 (i32, i8*, ...) @sdscatprintf(i32 %30, i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.1, i64 0, i64 0))
  %32 = call i32 @ldbLog(i32 %31)
  br label %33

33:                                               ; preds = %29, %24
  ret void
}

declare dso_local i32 @atoi(i32) #1

declare dso_local i32 @ldbLog(i32) #1

declare dso_local i32 @sdscatprintf(i32, i8*, ...) #1

declare dso_local i32 @sdsempty(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
